Legg til tekst i kirkekunst

--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -48,79 +48,73 @@ Siden den gang har altertavlen vært en sentral del av museets samlinger, sist s
     image="/images/kirkekunst/NK1_jutstilling.jpg" 
     imageAlt="Bilde av altertavlen i utstillingsrom. Her er mange andre altertavler. Altertavlen står på gulvet og rekker nesten opp i taket. "
   >
-     Altertavlen fra Ørskog kirke i utstilling. Foto Adnan Icagic, Universitetsmuseet i Bergen
+     Altertavlen fra Ørskog kirke i utstilling. (Foto Adnan Icagic, Universitetsmuseet i Bergen)
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/kirkekunst/Altertavle_NK1.jpg" 
     imageAlt="Nærbilde av Altertavlen. Viser nattverden neders, korsdestelsen i midten og oppstaandelsen øverst. Mye farger i rødt, grønt, blått og gull "
   >
-    Nærbilde av altertavlen fra Ørskog kirke. Foto Svein Skare, Universitetsmuseet i Bergen 
+    Nærbilde av altertavlen fra Ørskog kirke. (Foto Svein Skare, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/kirkekunst/A012L0001_Kirkekunstkatalog.png" 
     imageAlt="Bilde av to sider i museumskatalogen som beskriver gjenstanden. På venstre side er det er foto av altertavlen"
   >
-    Den første siden i katalogen over nyere kirkekunst ved museet (Skjermbilde Digitalarkivet) 
+    Den første siden i katalogen over nyere kirkekunst ved museet (Kilde: Katalog over nyere tids kirkekunst, skjermbilde Digitalarkivet, Universitetsmuseet i Bergen) 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/kirkekunst/AV_Innbydelsen.jpg" 
-    imageAlt="Forsiden av innbydelsen museets grunnlegger Christie sendte ut. Trykket med gotiske bokstaver"
+    imageAlt="Forsiden av innbydelsen museets grunnlegger Christie sendte ut. Trykket med gotiske bokstaver (Kilde: Statsarkivet i Bergen, Arkivverket)"
   >
     Innbydelsen om å opprette et museum sendt ut av W.F.K. Christie sendte ut april 1825 
-  </ImageCarousel.Item>
-  <ImageCarousel.Item 
-    image="/images/arkeologi/Tema-2021-Figur-1-Fosseringen-G-Hansen-750x615.jpg" 
-    imageAlt="Gravene på Myklebostad paa Nordfjordeid."
-  >
-    Figur 5. Shetelig sin rapport fra 1902 
   </ImageCarousel.Item>
   <ImageCarousel.Item 
     image="/images/kirkekunst/ubb-kk-1318-3082x_xl.jpg" 
     imageAlt="Foto i svart hvitt. Man ser Ørskog kirke like ved fjorden, med fjell og natur rundt."
   >
-    Foto av Ørskog kirke. Foto: Knud Knudsen. 
+    Foto av Ørskog kirke. Foto: Knud Knudsen, Universitetsbiblioteket i Bergen. 
   </ImageCarousel.Item>
 </ImageCarousel>
 
 <Cards id="historier" title="Historier om kirkekunst" className="full pt-10 md:pt-20">
   <Card 
     title="Kirkekunst 360" 
-    description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt" 
+    description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt. Foto: Universitetsmuseet i Bergen" 
     image="/images/kirkekunst/Dørslag_stavkirke_red.jpg" 
     imageAlt="FiskDørslag i jern, rikt dekorert fra stavkirke" 
     href="https://kuula.co/share/collection/7J7Sx?logo=1&info=0&fs=1&vr=1&zoom=1&initload=0&thumbs=-1" 
   />
   <Card 
     title="Middelalderens kirkekunst" 
-    description="Få innblikk i museets kirkekunstsamling fra Middelalder" 
+    description="Få innblikk i museets kirkekunstsamling fra Middelalder. (Kalk,MA187a. Foto: Mette Bing Espedal, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/Kalk_Ma187a_red.jpg" 
     imageAlt="En liten kalk i gull" 
     href="https://kirkekunst.w.uib.no/" 
   />
   <Card 
     title="Nedstrynfrontalen" 
-    description="Les historien til den berømte nedstrynfrontalen" 
+    description="Les historien til den berømte nedstrynfrontalen. (Foto: Svein Skare, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/Ma1_Nedstryn_red.jpg" 
     imageAlt="Rikt dekorert altertavle med bilder fra bibelhistorien" 
     href="https://tohundrefortellinger.w.uib.no/1826/09/26/1826-nedstrynfrontalen/" 
   />
   <Card 
     title="Hovemadonnaen" 
-    description="Les mer om madonnafiguren som kom til museet i 1840" 
+    description="Les mer om madonnafiguren som kom til museet i 1840. (Foto: Adnan Icagic, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/MA27_madonna_red.jpg" 
     imageAlt="Madonnafigur med jesusbarn på fanget. Laget i tre og malt med gull" 
     href="https://tohundrefortellinger.w.uib.no/1840/01/01/1840-hovemadonnaen/" 
   />
   <Card 
     title="Hvem var biskop Jacob Neumann?" 
-    description="Les mer om biskop i Bergen og en av grunnleggerne av Bergens Museum" 
+    description="Les mer om biskop i Bergen og en av grunnleggerne av Bergens Museum. (Foto: Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/By7851_Neumann_red.jpg" 
     imageAlt="Maleri av gammel mann. Biskop." 
     href="https://tohundrefortellinger.w.uib.no/1848/09/27/1848-biskop-jacob-neumann-og-museet/" 
   />
   <Card 
     title="Stavkirkeportalene fra Stedje" 
-    description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje" 
+    description="Museet har flere portaler fra stavkirker i sin samling, en av disse er fra Stedje. (Foto: Olav Espevoll, Universitetsmuseet i Bergen)" 
     image="/images/kirkekunst/Stavkirkeportal_Stedje.jpg" 
     imageAlt="" 
     href="https://tohundrefortellinger.w.uib.no/1867/06/20/1866/" 
