Update Menneskene section with improved card layout and corrected image path

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -8,14 +8,15 @@ import {Cards, Card} from '@/components/card'
 
 <div className="text-xl text-center pb-20">
   <h1 className="text-5xl text-center">— Menneskene —</h1>
+
   Menneskene som på ulike vis har formet museets historie
 </div>
 
-<Cards>
+<Cards className="full pt-10 md:pt-20">
   <Card
-    title="Andres Lorange (1847-188) "
+    title="Andres Lorange (1847-188)"
     description="Museets første konservator og arkeolog" 
-    image="images/Mennesker-museet/AndersLorange_red.jpg" 
+    image="/images/Mennesker-museet/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
     href="https://marcus.uib.no"
   />
