Update title and content for archaeological theme: change 'Det brente skipet' to 'Gravritualer i vikingtiden' and enhance introductory text.

--- a/content/tema/arkeologi/gravritualer-i-vikingtiden.mdx
+++ b/content/tema/arkeologi/gravritualer-i-vikingtiden.mdx
@@ -1,5 +1,5 @@
 ---
-title: Det brente skipet
+title: Gravritualer i vikingtid
 description: 
 keywords: 
   - markdown
@@ -9,7 +9,7 @@ keywords:
 ---
  
 <ContentGrid>
-# Det brente skipet
+# Gravritualer i vikingtid
  
  Er du nysgjerrig på hvordan "gravritualer" kan ha foregått i Vikingtiden? Da anbefaler vi at du ser denne filmen laget av Archeion.
 
