Use full kirkekunst vr exhibition name

--- a/content/tema/kirkekunst/index.mdx
+++ b/content/tema/kirkekunst/index.mdx
@@ -78,7 +78,7 @@ Siden den gang har altertavlen vært en sentral del av museets samlinger, sist s
 
 <Cards id="historier" title="Historier om kirkekunst" className="full pt-10 md:pt-20">
   <Card 
-    title="Kirkekunst 360" 
+    title="Kirkekunsten 360°" 
     description="Opplev museets unike kirkekunstsamling med å vandre rundt i utstillingen digitalt. Foto: Universitetsmuseet i Bergen" 
     image="/images/kirkekunst/Dørslag_stavkirke_red.jpg" 
     imageAlt="FiskDørslag i jern, rikt dekorert fra stavkirke" 
