legg-til-tekst-christie

--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -13,12 +13,19 @@ import {Cards, Card} from '@/components/card'
 </div>
 
 <Cards className="full pt-10 md:pt-20">
+   <Card 
+    title="Wilhelm Frimann Koren Christie (1778-1849)"
+    description="Grunnlegger av Bergens Museum" 
+    image="/images/Mennesker-museet/Christie_grunnleggerBy1871.jpg" 
+    imageAlt="Portrett av Chrisite" 
+    href="/WFK-Christie"
+  />
   <Card
-    title="Andres Lorange (1847-188)"
+    title="Andres Lorange (1847-1888)"
     description="Museets første konservator og arkeolog" 
     image="/images/Mennesker-museet/AndersLorange_red.jpg" 
     imageAlt="Portrett av Andres Lorange" 
-    href="https://marcus.uib.no"
+    href="https://www.unimus.no/arkeologi/lorange/#0"
   />
   <Card
     title="Olaf Hanssen"
