--- a/content/menneskene.mdx
+++ b/content/menneskene.mdx
@@ -18,7 +18,7 @@ import {Cards, Card} from '@/components/card'
     description="Grunnlegger av Bergens Museum" 
     image="/images/Mennesker-museet/Christie_grunnleggerBy1871.jpg" 
     imageAlt="Portrett av Chrisite" 
-    href="/WFK-Christie"
+    href="/wfk-Christie"
   />
   <Card
     title="Andres Lorange (1847-1888)"
