Add new document types for 'visuell-geologi' and 'geologi-og-folkeliv-i-hardanger'; update introduction text in visuell-geologi.mdx

--- a/content/tema/stein/visuell-geologi.mdx
+++ b/content/tema/stein/visuell-geologi.mdx
@@ -11,7 +11,8 @@ keywords:
 <ContentGrid>
 
 # En visuell reise i geologisk forskning
-## Geologisk forskning på Bergens Museum ble dokumentert og formidlet i flere ulike formater.
+
+Geologisk forskning på Bergens Museum ble dokumentert og formidlet i flere ulike formater.
 
 ![Stein med korallfossiler](/images/stein/ubb-korallfossil.jpg)
 *Korallfossil utstilt på Universitetsmuseet i Bergen, funnet av Olaf Hanssen i Hegglandsdalen i Os. Fotograf: Ola Søndenå.*
