--- a/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
+++ b/content/tema/stein/astrid-monsen-en-kvinnelig-pioner-ved-bergens-museum.mdx
@@ -12,26 +12,37 @@ keywords:
 ---
 
 <ContentGrid>
-![Foto av Astrid Monsen med spade](/images/stein/ubb-ms-2093-l-1-072-062.jpg)
-*Astrid Monsen og assistent på Feltarbeid. Fotograf: Ukjent. Universitetsbiblioteket i Bergen.*
-
 
 # Astrid Monsen – En kvinnelig pioner ved Bergens Museum
 
 I 1918 ble Astrid Monsen (1886-1960) ansatt som konservator ved Mineralogisk-Geologisk avdeling ved Bergens Museum, som den første kvinne i vitenskapelig stilling ved museet. Ved Spesialsamlingen er det bevart fem feltbøker og over 700 fotografier fra feltarbeidene hennes. Hun publiserte lite, men utførte desto mer feltarbeid, fotografiene hennes dokumenterer ca. 35 lokaliteter bare for perioden 1937-1944. Astrid Monsen var ansatt på museet i 30 år, hun pensjonerte seg i 1948. 
 
+<Figure mode="portrait" image="/images/stein/ubb-ms-2093-l-1-072-062.jpg" alt="" width={1000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Astrid Monsen og assistent på Feltarbeid. Fotograf: Ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure> 
+
 Astrid Monsen var født i Riga i Latvia, med tyskbaltisk mor og norsk far. Hun studerte paleontologi og historisk geologi i Jena, Königsberg og Leipzig, og arbeidet som assistent ved det paleontologiske institutt i Leipzig fra 1910. I 1916 studerte hun videre i Kristiania, og fikk den nyopprettede konservatorstillingen ved Bergens Museum i 1918, ansatt av den mektige lederen ved Mineralogisk-Geologisk avdeling, professor Carl Fredrik Kolderup. Monsen var ugift, noe som for kvinner besynderlig nok var en forutsetning for å kunne jobbe ved museet, både i vitenskapelige stillinger eller som assistenter og sekretærer. 
 
 Monsen var en av de første profesjonelle kvinnelige geologene i Norge, og hadde i studietiden og i Leipzig spesialisert seg på graptolitter (dyrefossiler) og paleontologi. Som sin første oppgave i Bergen fikk hun da også ansvaret for å gjennomgå museets paleontologiske samlinger, for å lage en utstillingssamling og en studiesamling. Men deretter beordret Kolderup henne til utelukkende å konsentrere seg om Vestlandets kvartærgeologi, med særlig vekt på å kartlegge klimaforandringer gjennom undersøkelser av morenemateriale, særlig i avleiringer i sand- og grustak.  
 
-![geologisk snitt](/images/stein/ubb-ms-2093-t-02-12-04-047.jpg)
-*Fra Astrid Monsens feltarbeid, Gåssand ved Os, 1939. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
+
+<Figure mode="portrait" image="/images/stein/ubb-ms-2093-t-02-12-04-047.jpg" alt="" width={1000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fra Astrid Monsens feltarbeid, Gåssand ved Os, 1939. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Karrieremessig var nok Kolderups avgjørelse svært problematisk for graptolitt-spesialisten, og det forteller nok like mye om hennes status ved avdelingen, som ung nyansatt kvinnelig forsker i et mannsdominert arbeidsmiljø. I tillegg hadde Kolderup i 1919 ansatt sin egen sønn, Niels-Henrik Kolderup, i en amanuensis-stilling, så Astrid Monsen ble i nesten hele sin tid ved museet regjert av far og sønn Kolderup. 
 
 I over 25 år utforsket Astrid Monsen Vestlandets kvartærgeologi, i hovedsak i Hordaland, men også i deler av Sogn og Fjordane. Hun oppsøkte moreneavleiringer i et utall sandtak, gravde grøfter og laget snitt som hun målte, dokumenterte og fotograferte. De over 700 bevarte fotografiene vitner om det anstrengende feltarbeidet, og de mange nærbildene av snitt med spade og tommestokk vitner om en nøyaktig og grundig feltmetodikk. Selv om deler av fotosamlingen er av ujevn teknisk kvalitet, er den likevel en uvurderlig forsknings- og dokumentasjonssamling.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-jr-089-002?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-jr-089-002?as=iiif">
   <Work.Content>
     <Work.Description>
       Astrid Monsen med assistenter på feltarbeid i Romarheim, 1930. Fotografering av sedimenter. Fotograf: John B. Rekstad. Universitetsbiblioteket i Bergen.
@@ -43,15 +54,24 @@ I over 25 år utforsket Astrid Monsen Vestlandets kvartærgeologi, i hovedsak i 
 </Work>
 
 
-![Feltbok med tegning av geologisk snitt](/images/stein/ubb-ms-2093-f-06-0091.jpg)
-*Side fra Astrid Monsens feltbok fra Lepsøy i Os, september 1947. Universitetsbiblioteket i Bergen.*
-
+<Figure mode="portrait" image="/images/stein/ubb-ms-2093-f-06-0091.jpg" alt="" width={1000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Side fra Astrid Monsens feltbok fra Lepsøy i Os, september 1947. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Det er påfallende at hun aldri publiserte noe om den langvarige kvartærgeologiske forskningen, det sier kanskje litt om hvordan hun opplevde den påtvungne faglige endringen i karrieren sin, og publiserte kun en kort artikkel i Bergens Museums årbok i 1934, om skjellforekomster fra Helgeland. Mer oppmerksomhet fikk de to tyskspråklige artiklene om graptolitter som hun publiserte i Norsk Geologisk tidsskrift i 1925 og 1937; den førstnevnte var avhandlingen hennes til cand.real.-graden fra 1924. Hun ble også innvalgt i Norsk Geologisk Forening i mai 1935, etter forslag fra Knut Fægri og Niels-Henrik Kolderup. 
 
 Etter 30 år på museet fikk hun innvilget pensjon 31. desember 1948. I et påfallende kort avsnitt i årsmeldingen fra 1948 oppsummeres et langt forskerliv ved museet, med en like så påfallende taushet om hennes rolle som banebrytende kvinnelig forsker ved museet. Istedenfor vektlegges det rikholdige og viktige materialet hun samlet – feltbøker, målinger, prøver og fotografier. Og heldigvis kan vi gjennom dette materialet, og særlig gjennom fotografiene, følge feltarbeidet og forskerkarrieren hennes på nært hold, med hennes blikk, som en høyst nødvendig dokumentasjon av den første kvinnelige forskeren ved Bergens Museum i et år der institusjonen feirer sitt 200års-jubileum. 
 
-![Feltbok med tegning av geologisk snitt](/images/stein/ubb-ms-2093-l-1-085-007.jpg)
-*Side fra Astrid Monsens felt-fotoalbum fra Gåssand ved Os, 1939. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.*
+<Figure mode="portrait" image="/images/stein/ubb-ms-2093-l-1-085-007.jpg" alt="" width={1000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Side fra Astrid Monsens felt-fotoalbum fra Gåssand ved Os, 1939. Fotograf: Astrid Monsen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
