Refactor image syntax in geologi-og-folkeliv-i-hardanger.mdx to use Figure component, improving layout and consistency with recent updates.

--- a/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
+++ b/content/tema/stein/geologi-og-folkeliv-i-hardanger.mdx
@@ -11,13 +11,18 @@ keywords:
 ---
 
 <ContentGrid>
-![Feltbok](/images/stein/ubb-ms-2093-i-03-0101.jpg)
-*Illustrasjon fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Illustrasjon fra Ljono i Ulvik, 3. juli 1877. Universitetsbiblioteket i Bergen.*
-
 
 # Geologi og folkeliv i Hardanger
 
 I regnvåte sommermåneder i 1877 og 1878 reiste cand. real. Thomas Christian Thomassen på feltarbeid inn i landskapet og folkedypet i Hardanger. Med finslipt fyllepenn geologiserte han både bergarter og befolkning, sirlig og lett infamt nedtegnet i skinninnbundne feltdagbøker med messingspenner.
+
+<Figure className="feature" image="/images/stein/ubb-ms-2093-i-03-0101.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+Illustrasjon fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Illustrasjon fra Ljono i Ulvik, 3. juli 1877. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 ## Hva vi snakker om når vi snakker om feltbøker
 Naturvitenskapelige feltbøker er en hybrid genre, uten faste krav til struktur eller innhold, men som regel med faste innslag med dokumentasjon av observasjoner, målinger og data, ofte illustrert med tegninger og skisser. I tillegg inneholder ofte feltbøker personlige kommentarer, tanker, innfall og utbrudd som krydrer feltbøkene og gjør dem mer lesbare og fascinerende. Feltbøkene gjenspeiler metodene og prosessene i selve feltarbeidet, og de gjenspeiler ikke minst personligheten til forskeren.
@@ -29,14 +34,18 @@ Den geologiske feltbok-samlingen som er bevart ved Spesialsamlingene er både om
 
 Thomassen var 1888-1890 konstituert i Fridtjof Nansens stilling som konservator ved Bergens Museum, mens Nansen vandret over innlandsisen på Grønland. I disse to årene startet Thomassen en storstilt opprydding i museets usorterte og ukatalogiserte samlinger av bergarter, mineraler og fossiler; en opprydding og systematisering som ble utgangspunktet for den mer formelle etableringen av Mineralogisk-geologisk avdeling ved museet i slutten av 1890-årene. Thomassen var også svært aktiv i tidsskriftet Naturen, utgitt av Bergens Museum; han publiserte 16 artikler i perioden 1877-1896.
 
-![Portrett av Thomas Christian Thomassen](/images/stein/ubb-ms-2093-t-001-022.jpg)
-*Portrett av Thomas Christian Thomassen (1849-1897), hentet fra jubileumsboka til Bergens Museum fra 1925. Fotograf ukjent. Universitetsbiblioteket i Bergen. Universitetsbiblioteket i Bergen.*
-
+<Figure mode="portrait" image="/images/stein/ubb-ms-2093-t-001-022.jpg" alt="" width={1000} height={2000}>
+  <Figure.Content>
+    <Figure.Description>
+      Portrett av Thomas Christian Thomassen (1849-1897), hentet fra jubileumsboka til Bergens Museum fra 1925. Fotograf ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 ## Geologiske strabaser
 Feltbøkene fra 1877 og 1878 ble laget under Thomassens feltarbeid i Hardanger, på oppdrag for NGU. Han reiste vidt og bredt og høyt i Hardanger-landskapet, med fokus på Folgefonnhalvøya, med avstikkere til Ulvik og Granvin og Øystese, og korte pustepauser i Bergen. Hovedinnholdet i feltbøkene er naturlig nok kartlegging av bergartene i Hardanger, og feltarbeidet fra det første året ble publisert i Nyt Magazin for Naturvidenskaberne i 1877, «Geologiske Undersøgelser paa Folgefons Halvø».
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-n-374-067?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-n-374-067?as=iiif">
   <Work.Content>
     <Work.Description>
       Utstilling av bergarter, mineraler og fossiler i kjelleren på Bergens Museum 1890; resultatet av Thomassens ryddejobb i de kaotiske geologiske samlingene. Bildet er hentet fra jubileumsboka til Bergens Museum fra 1925. Universitetsbiblioteket i Bergen.
@@ -56,31 +65,44 @@ Strabasene satte også kroppslige spor hos den stakkars geologen, feltarbeidet i
 «Det høire Knæ var sygt og hvert Skridt kostede Smerte»; og etter en tur til Bondhusbreen 20. juli 1878: Tandpine efter Gaarsdagens Stræv».
 
 ## Folkelivsskildreren
+
 Thomassen hadde en utpreget hang til å karakterisere personene han møtte, og han folkelivsskildret uten hemninger lokalbefolkning og embetsmenn og turister på tidstypisk manér – fra «tækkelige» koner og «Turistdamer» til stive, affekterte og «Vigtige» prester og kirkesangere. Og særlig en av disse stakkars kirkesangerne fikk gjennomgå. Søndag 1. juli 1877 var han med på gudstjeneste i Jondal kirke, og skildringen over fem sider i feltboka viser at seremonien gjorde inntrykk på Thomassen, han ble både «dypt beveget», fascinert og «forfærdet» - det siste ikke minst av kirkesangeren, som til stadighet «sang solo en Salme, udstyrende Melodien med saa mangen Koloratur, at den for den Sags Skyld gjerne kunde have hørt til en Italiensk Arie».
 
 På grunn av svært dårlig vær («Storm og Regn. Dette behøver jeg snart ikke at anmærke lenger, thi det er Dagens Orden saa») ble han liggende værfast i Samland i Jondal, og brukte ventetiden til å folkelivsskildre befolkningen:
 
 «Paa Samland var der meget trist. Folket er tungt og trægt, superreligiøst (..) Jeg overvar Slutningen af en Husandagt. Han. Ole, var Forsanger og i en ynkelig skrigende og snøvlende Tone skreg han. Dette var nu saa, men under sangen saa han paa skraa hen paa mig gjentagne Gange. Dette sjælende Blik havde noget infamt ræveagtigt ved sig, at det paa mig gjorde et ganske forfærdeligt Indtryk».
 
+<Figure className="feature" image="/images/stein/ubb-ms-2093-i-3-0027.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», side 23, av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0027.jpg)
-*Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
-
-![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0131.jpg)
-*Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/stein/ubb-ms-2093-i-3-0131.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», side 127, av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Og når i tillegg maten «var den usleste jeg har kjendt» var lidelseshistorien komplett.
 
 
-![Akvarell malt av Catharina Kølle](/images/stein/ubm-bf-diby-000463.jpg)
-*Catharine Hermine Kølle: «Samland i Hardanger». Fotograf: Svein Skare. Universitetsmuseet i Bergen.*
-
+<Figure className="feature" image="/images/stein/ubm-bf-diby-000463.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Catharine Hermine Kølle: «Samland i Hardanger». Fotograf: Svein Skare. Universitetsmuseet i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 ## «Det Storartede og Skjønne i Naturen»
 Men alt var ikke kun lidelse og strabaser. Thomassen hadde et velutviklet blikk for naturen og landskapene i Hardanger, og skildret på tidstypisk vis «forfærdelige Afgrunde» og vakre fosser og utsikter i en og samme setning.
 
-<Work iiifContent="https://api.ub.uib.no/items/ubb-kk-ns-0214?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-kk-ns-0214?as=iiif">
   <Work.Content>
     <Work.Description>
       Folgefonna. Fotografi fra midten av 1860-årene av Knud Knudsen. Universitetsbiblioteket i Bergen.
@@ -100,9 +122,13 @@ Den mest unike naturopplevelsen fikk Thomassen under et strabasiøst forsøk på
 
 «Her fra Høiden saaes et ganske eiendommeligt Naturfænomen. Over Osafjorden var nemlig udspændt 4 over hinanden staaende Regnbuer. De tegnede sig dog ikke som Buer, men som horisontale Linier. Over Vossevangen rullede Tordenen».
 
-![Feltbok med tegning av regnbue](/images/stein/ubb-ms-2093-i-3-0039.jpg)
-*Thomassens regnbue, fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/stein/ubb-ms-2093-i-3-0039.jpg" alt="" width={1000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Thomassens regnbue, fra «Dagbog ført under Reiser i Søndre Bergenhus sommeren 1877», av Thomas Christian Thomassen. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 *Korte avsnitt i denne teksten har vært tidligere publisert i «Felthistorier» av Marianne Paasche og Ola Søndenå; Universitetsmuseets årbok 2018.*
 
