Refactor image syntax in geologiske-undervisningsplansjer.mdx to utilize Figure component, enhancing layout and consistency with previous updates.

--- a/content/tema/stein/geologiske-undervisningsplansjer.mdx
+++ b/content/tema/stein/geologiske-undervisningsplansjer.mdx
@@ -10,22 +10,36 @@ keywords:
 ---
 
 <ContentGrid>
-![Undervisningsplansje av granitt](/images/stein/ubb-ms-2267-v-c-008.jpg)
-*«Intrusion av granit i gneis». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
-
-
 # Geologiske undervisningsplansjer
 
 På Mineralogisk-geologisk avdeling på Bergens Museum var store undervisningsplansjer et av de viktigste hjelpemidlene til bruk i undervisning og til formidling i utstillinger. Flesteparten av de 750 fargerike plansjene som er bevart ved Universitetsbiblioteket ble håndtegnet ved museet, i stor grad av kvinnelige illustratører som bl.a. Ellen Irgens.  
+
+<Figure mode="portrait" image="/images/stein/ubb-ms-2267-v-c-008.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Intrusion av granit i gneis». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Plansjene omfatter hele det faglige spekteret innen geologi, inndelt i 12 ulike klasser. Mange av dem er svært store, opptil et par meter lange, og alle bærer merker etter å ha vært opphengt i undervisningsrom eller i utstillinger.  
 
 Ved første blikk kan flere av motivene på plansjene også tolkes som abstrakte fargerike kunstverk. Og et lite utvalg av plansjene ble da også brukt i kunstutstillingen «(w)ord. Ebbe + Flow. Travelling exhibition» i 2021, et samarbeidsprosjekt mellom norske og skotske kunstnere.
 
-![Håndtegnet undervisningsplansje av geologisk profil](/images/stein/ubb-ms-2267-v-c-05.jpg)
-*«Profil Sundalskjøn-Hallingskarven». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/stein/ubb-ms-2267-v-c-05.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Profil Sundalskjøn-Hallingskarven». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
-![Håndtegnet undervisningsplansje av geologisk profil](/images/stein/ubb-ms-2267-vi-f-034.jpg)
-*«Tversnit af den norske kontinentalplatform». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.*
+<Figure image="/images/stein/ubb-ms-2267-vi-f-034.jpg" alt="" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      «Tversnit af den norske kontinentalplatform». Geologisk undervisningsplansje fra Bergens Museum. Ukjent år. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
