Refactor Work component in spesialutfordringen-dagfinn-moe.mdx to include className for improved styling and update document section for clarity.

--- a/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
+++ b/content/tema/vekster/spesialutfordringen-dagfinn-moe.mdx
@@ -13,12 +13,12 @@ keywords:
 # Spesialutfordringen - Dagfinn Moe og den hemmelege hagen
 
 <Video src="https://youtu.be/nQB-cVF_wNo?si=0TYwa_0e8jsivq9R" />
+
 <a href="https://www.youtube.com/playlist?list=PLf8ZIYfAO0qi9KHwsfRRN4nHfP7dJKLl3">Flere videoer fra Spesialutfordringen kan du se her!</a>
 
+Se dokumentene i Marcus:
 
-
-## Se dokumentene i Marcus:
-<Work iiifContent="https://api.ub.uib.no/items/ubb-ms-0811-h-01-1?as=iiif">
+<Work className="feature" iiifContent="https://api.ub.uib.no/items/ubb-ms-0811-h-01-1?as=iiif">
   <Work.Content>
     <Work.Description>
       ”Historisk Beskrivelse over Lyst-Anlægget ved Landaas Broe”, skrevet av W.F.K. Christie rundt 1821. Universitetsbiblioteket i Bergen.
