Refactor image syntax in bokflora.mdx to utilize Figure component, enhancing visual presentation and consistency with previous updates.

--- a/content/tema/vekster/bokflora.mdx
+++ b/content/tema/vekster/bokflora.mdx
@@ -10,23 +10,38 @@ keywords:
 ---
 
 <ContentGrid>
-![Florabok](/images/vekster/ubb-spesmag-f-0020-001.jpg)
-*Illustrasjon fra Norges første flora, «Flora Norvegica» av Johan Ernst Gunnerus, utgitt i 1766. Universitetsbiblioteket i Bergen.*
-
-
 # Bokflora
 
 Universitetsbiblioteket bevarer en mengde botanisk illustrasjonsmateriale, noe i manuskriptform, men det meste i bøker og da særlig i floraer – de eldste fra 1600-tallet. De mest kjente floraene finnes i samlingene, som Carl von Linnés «Flora Lapponica» fra 1737, og den første norske floraen, «Flora Norvegica» av Johan Ernst Gunnerus, utgitt i to bind 1766 og 1776. Det største og mest kjente praktverket i denne sjangeren er «Flora Danica», utgitt i 54 bind mellom 1761 og 1883, med 3240 plansjer med botaniske illustrasjoner, bevart ved Universitetsmuseet. 
 
+<Figure mode="portrait" className="feature" image="/images/vekster/ubb-spesmag-f-0020-001.jpg" alt="Florabok" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Illustrasjon fra Norges første flora, «Flora Norvegica» av Johan Ernst Gunnerus, utgitt i 1766. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
+*Illustrasjon fra Norges første flora, «Flora Norvegica» av Johan Ernst Gunnerus, utgitt i 1766. Universitetsbiblioteket i Bergen.*
+
 I påfallende mange floraer er det bevart pressede blomster, løv, lav og moser mm. gjemt mellom sidene. Felles for slike florafunn er at de synliggjør og forteller noe om bruken av boka, om leseren, de er en del av bokas brukshistorie og proveniens. Nå er det selvsagt ikke bare i floraer det finnes slike botaniske spor, i et bredt spekter av bøker i samlingene våre dukker det frem mer eller mindre godt bevarte rester etter bokeierens botanisering. Og i noen tilfeller er også pressede blomster og planter brukt til å dekorere bøkenes omslag eller tittelblad.
 
-![Bok med presset plante](/images/vekster/ubb-romertall-oktav-iii-c-wah-01-01.jpg)
-*En velbevart bregne funnet mellom sidene i Georg Wahlenbergs «Flora Svecica» fra 1824-26. Universitetsbiblioteket i Bergen.*
-
+<Figure mode="portrait" className="feature" image="/images/vekster/ubb-romertall-oktav-iii-c-wah-01-01.jpg" alt="Bok med presset plante" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      En velbevart bregne funnet mellom sidene i Georg Wahlenbergs «Flora Svecica» fra 1824-26. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 En svært så liten sjangernisje i denne «bokfloraen» er publiserte bøker illustrert med «ekte» botanisk materiale. Den eldste eksempelet i samlingene våre er «Specimen medico-practico botanicum» av Johannes de Buchwald utgitt i København i 1720. Dette var en bok beregnet på farmasøyter og apotekere, med ekte urter og planter limt inn i boka. En annen bok med ekte botanisk materiale er H. Schmidts «Führer in die Welt de Laubmoose» fra 1897, der 136 ulike bladmoser er presentert i all sin ekte prakt, forbløffende godt bevart etter 128 år. 
 
-![Bok med innlimt mose](/images/vekster/ubb-romertall-oktav-iii-b-6-sch-01.jpg)
-*En publisert bok med «ekte» botanisk materiale. 136 bladmoser ble presentert i H. Schmidts «Führer in die Welt de Laubmoose» i 1897. Universitetsbiblioteket i Bergen.*
+<Figure mode="portrait" className="feature" image="/images/vekster/ubb-romertall-oktav-iii-b-6-sch-01.jpg" alt="Bok med innlimt mose" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      En publisert bok med «ekte» botanisk materiale. 136 bladmoser ble presentert i H. Schmidts «Führer in die Welt de Laubmoose» i 1897. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
