Refactor image syntax in knut-faegri.mdx to utilize Figure component, improving visual presentation and maintaining consistency with recent updates.

--- a/content/tema/vekster/knut-faegri.mdx
+++ b/content/tema/vekster/knut-faegri.mdx
@@ -7,22 +7,35 @@ keywords:
 ---
 
 <ContentGrid>
-![Lysbilde med blomster](/images/vekster/ubb-ms-2196-a-01-012.jpg)
-*Lysbilde fra serien «Alpenflora», fra Knut Fægris fotosamling. Fotograf og år ukjent. Universitetsbiblioteket i Bergen.*
-
-
 # Knut Fægri
+
+<Figure className="feature" image="/images/vekster/ubb-ms-2196-a-01-012.jpg" alt="Hvite blomster på en mosekledd stein" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Lysbilde fra serien «Alpenflora», fra Knut Fægris fotosamling. Fotograf og år ukjent. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
+
 Botanikkprofessor Knut Fægri (1909-2001) var en institusjon i seg selv. Arkivmaterialet etter Fægri, som er bevart ved Universitetsbiblioteket i Bergen, inneholder materiale fra smått utrolige 75 års omfattende og allsidig virksomhet ved Bergens Museum/UiB, fra 1926 til 2001. Foruten å være en av de mest betydningsfulle botanikerne i det tjuende århundre, var Fægri en livslang forkjemper for museets og UiBs status og samfunnsverdi, han var en skarpskodd og ofte provoserende debattant og en skribent med sylkvass penn, og en gudbenådet vitenskapelig og populærvitenskapelig formidler.
 
-![Side fra fotoalbum](/images/vekster/ubb-ms-2072-e-10-002.jpg)
-*På feltarbeid i Sverige, fra Knut Fægris fotoalbum fra 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/vekster/ubb-ms-2072-e-10-002.jpg" alt="Side fra fotoalbum" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      På feltarbeid i Sverige, fra Knut Fægris fotoalbum fra 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Fægri ble tilknyttet Bergens Museum som 17-åring i 1926, etter avlagt examen artium. Videre studier i Bergen og Oslo, samt lange feltstudier, førte direkte frem til doktorgrad i 1934, som 25-åring. Arbeidet til doktorgraden lå i skjæringspunktet mellom botanikk, geologi, glasiologi og klimalære, og var en studie av langtidsvariasjoner og plantesuksesjon ved Jostedalsbreen og Nigardsbreen – fremveksten av planter på morener og fjell der Jostedalsbreen trakk seg tilbake etter den «lille istiden» på 1700-tallet. 
 
-![Oppslag i feltbok](/images/vekster/ubb-ms-2072-b-003-d-002.jpg)
-*Knut Fægris velbrukte feltbok fra doktorgradsarbeidet hans ved Jostedalsbreen, sommeren 1933. Universitetsbiblioteket i Bergen.*
-
+<Figure className="feature" image="/images/vekster/ubb-ms-2072-b-003-d-002.jpg" alt="Oppslag i feltbok" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Knut Fægris velbrukte feltbok fra doktorgradsarbeidet hans ved Jostedalsbreen, sommeren 1933. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Fire feltbøker fra studiene i Jostedalen er bevart, fra perioden 1929 til 1933. Gjennom detaljerte skildringer, målinger, plantelister, og ikke minst detaljerte regnskap, kan vi følge Fægris feltarbeid ved Jostedalsbreen nærmest dag for dag. Og i starten av den første feltboka fra juli 1929 kan vi følge – i sedvanlig «Fægrisk» språk -  hvordan Fægri langsomt arbeider seg inn i det krevende landskapet under breen, og blir fortrolig med det som ble en av de viktigste feltlokalitetene hans.
 
@@ -44,8 +57,13 @@ I løpet av 1930-tallet bygget Fægri opp en omfattende samling med glassdias, b
 
 Fægri var, med egne ord, en «entusiastisk amatørfotograf», samtidig som han dokumenterte sin egen forskning og egne feltarbeid gjennom store mengder fotografier - ved Spesialsamlingen er det bevart ca. 1500 negativer og glassdias etter Fægri. Et utvalg av hans egne glassdias med blomstermotiv fikk Fægri håndkolorert hos fotofirmaet Wernøe & Guldbrandsen i Bergen.   
 
-![Portrett av Knut Fægri](/images/vekster/ubb-ms-2072-e-10-003.jpg)
-*Portrett av Knut Fægri, 1934, fra Fægris fotoalbum fra 1930-årene. Fotograf: Per Fett. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" image="/images/vekster/ubb-ms-2072-e-10-003.jpg" alt="Portrett av Knut Fægri" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Portrett av Knut Fægri, 1934, fra Fægris fotoalbum fra 1930-årene. Fotograf: Per Fett. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 Allerede som 22-åring var Fægri fast radiokåsør i Bergens Kringkasting, som holdt til i Telegrafbygningen. Tidlig på 1930-tallet fikk han boltre seg fritt i eteren om en rekke temaer – «Overtro og viden om merkelige planter», om istiden, om fremgangsmåter ved å plukke blomster, og om fotografering. Dessverre er trolig selve lydopptakene av Fægris foredrag gått tapt, men noen av foredragsmanuskriptene er heldigvis bevart ved Spesialsamlingen.  
 
@@ -54,7 +72,12 @@ De bevarte glassdiasene er et uvurderlig faghistorisk arkivmateriale, kilder som
 Vil du lese mer om Knut Fægri? Gå til:
 [1946 Knut Fægri: botanisk nestor – To hundre fortellinger på to hundre år](https://tohundrefortellinger.w.uib.no/1946/06/20/knutfaegri/)
 
-![Blomster](/images/vekster/ubb-ms-2196-a-14-004.jpg)
-*Fra Knut Fægris hage i Formannsvei i Sandviken, 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.*
+<Figure className="feature" image="/images/vekster/ubb-ms-2196-a-14-004.jpg" alt="Blomster" width={2000} height={1000}>
+  <Figure.Content>
+    <Figure.Description>
+      Fra Knut Fægris hage i Formannsvei i Sandviken, 1930-årene. Fotograf: Knut Fægri. Universitetsbiblioteket i Bergen.
+    </Figure.Description>
+  </Figure.Content>
+</Figure>
 
 </ContentGrid>
